Remove ignored files from version control

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,9 @@
 
 # Ignore Python cache files
 __pycache__/
-
 model/__pycache__/
-
 Paths/__pycache__/
+*.pyc
 
 # Ignore generated code
 c_generated_code/
@@ -18,6 +17,5 @@ acados_ocp.json
 # Ignore csv files
 *.csv
 
+# Ignore gif files
 *.gif
-
-*.pyc
